fix: deployment url

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,19 +1,22 @@
 {
-    "manifest_version": 3,
-    "name": "Watch Party (Basic)",
-    "version": "1.0",
-    "description": "Synchronizes video playback for watch parties",
-    "permissions": ["activeTab", "scripting", "storage"],
-    "action": {
-      "default_popup": "popup/popup.html"
-    },
-    "background": {
-      "service_worker": "background.js"
-    },
-    "content_scripts": [
-      {
-        "matches": ["https://www.hotstar.com/*"],
-        "js": ["content-script.js"]
-      }
-    ]
+  "manifest_version": 3,
+  "name": "Watch Party (Basic)",
+  "version": "1.0",
+  "description": "Synchronizes video playback for watch parties",
+  "permissions": ["activeTab", "scripting", "storage"],
+  "content_security_policy": {
+    "extension_pages": "default-src 'self'; connect-src 'self' wss://watch-party-app.cfapps.eu12.hana.ondemand.com; script-src 'self';"
+  },
+  "action": {
+    "default_popup": "popup/popup.html"
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://www.hotstar.com/*"],
+      "js": ["content-script.js"]
+    }
+  ]
 }
